--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -1,7 +1,6 @@
 html,
 body{
   height: 100%;
-  min-width: 900px;
 }
 
 #__nuxt {
@@ -25,7 +24,11 @@ body{
   max-width: 1440px;
   margin: 0 auto;
   padding: 20px;
-
+}
+@media (max-width: 768px) {
+  .wrapper{
+    padding: 10px;
+  }
 }
 .disabled_class {
   opacity: 0.5;
@@ -81,6 +84,3 @@ body{
   }
 }
 
-.dp__theme_light {
-  --dp-primary-color: #ffbaab;
-}
